--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>red-black-tree</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -18,10 +22,65 @@
                     <release>10</release>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <tasks>
+                                <copy overwrite="true" todir="${basedir}/src/main/antlr4/au/org/weedon/JavaSource">
+                                    <fileset dir="${basedir}/target/generated-sources/antlr4" includes="*.tokens"/>
+                                </copy>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-maven-plugin</artifactId>
+                <version>4.7.1</version>
+                <configuration>
+                    <visitor>true</visitor>
+                    <listener>true</listener>
+
+<!--
+                    <libDirectory>${basedir}/src/main/antlr4/au/org/weedon/JavaSource</libDirectory>
+-->
+<!--
+                    <libDirectory>${basedir}/target/generated-sources/antlr4</libDirectory>
+-->
+
+                    <!-- This is a hack to work around an issue where the plugin looks in the wrong
+                         location for the tokens files -->
+
+                    <!--
+                    <outputDirectory>${basedir}/src/main/antlr4</outputDirectory>
+                    -->
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>antlr4</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.7.1</version>
+        </dependency>
         <dependency>
             <groupId>guru.nidi</groupId>
             <artifactId>graphviz-java</artifactId>
